v3.6.9 (XXXX-XX-XX)
-------------------

* Added missing exceptions catch clause for some parts of supervision and
  heartbeat threads.

* Fixed potential deadlock in cluster transactions if a transaction is returned
  that was soft-aborted by transaction garbage collection before.
  This deadlock should rarely ever occur in practice, as it can only be
  triggered once during the server shutdown sequence.

* Optimization of empty append entries.

* Fixed BTS-233 issue: Fixed invalid IndexId comparator.

* If a collection (or database) is dropped during the instantiation of an AQL
  query, the setup code now aborts with an ERROR_QUERY_COLLECTION_LOCK_FAILED
  and earlier.
  Before the setup code could abort with TRI_ERROR_INTERNAL in the same case.

* Bug-fix: Allow to unlink a view created on a SmartGraphEdge collection.

* Fixed an ownership issue which could lead to undefined behavior in case an AQL
  query could not be inserted into the query registry of a coordinator or DB
  server successfully (due to an out-of-memory situation or a race during server
  shutdown).

* Instead of failing to connect to INADDR_ANY refuse it as a parameter, with a
  descriptive error message for novice users (issue #12871).

* Add parameter so `db.collection.truncate({compact: false})` will stop
  compaction from happening. Compaction may have performance impacts even if the
  truncate was invoked on nearly empty collections.
  This option has effect only for deployments with RocksDB storage engine.

* Fixed issue #12248: Web UI - Added missing HTML escaping in the setup script
  section of a foxx app.

* Fixed collection count which could be off after a server crash.


v3.6.8 (2020-10-14)
-------------------
      
* Added the following metrics for synchronous replication in the cluster:

  - `arangodb_refused_followers_count`: Number of times a shard leader received
    a refusal answer from a follower during synchronous replication.