@@ -1,6 +1,10 @@
 v3.6.9 (XXXX-XX-XX)
 -------------------
 
+* Fix REST API endpoint PUT `/_api/collection/<collection>/recalculateCount` on
+  coordinators. Coordinators sent a wrong message body to DB servers here, so
+  the request could not be handled properly.
+
 * Added missing exceptions catch clause for some parts of supervision and
   heartbeat threads.
 
